# my-openenv

./: Dockerfile  README.md  inference.py  inference_results.json  main.py  openenv.yaml  pyproject.toml  requirements.txt
env/: environment.py  models.py
grader/: grader.py
server/: app.py
tasks/: easy.py  hard.py  medium.py
