[project]
name = "soc-openenv"
version = "1.0.0"
description = "SOC Log Monitoring RL Environment"
authors = [{ name="Shruti" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"